<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch11</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tanvi2104.shinde@gmail.com">tanvi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>unitree_lidar_ros2</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rqt_tf_tree</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
